--- a/pom.xml
+++ b/pom.xml
@@ -26,18 +26,21 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-
 	<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-common -->
 	<dependency>
 		<groupId>org.glassfish.jersey.core</groupId>
 		<artifactId>jersey-common</artifactId>
 		<version>4.0.0-M1</version>
 	</dependency>
-
 	<dependency>
 		<groupId>com.fasterxml.jackson.core</groupId>
 		<artifactId>jackson-databind</artifactId>
 		<version>${jackson.version}</version>
+	</dependency>
+	<dependency>
+	  <groupId>info.picocli</groupId>
+	  <artifactId>picocli</artifactId>
+	  <version>4.7.6</version>
 	</dependency>
   </dependencies>
   <build>
