--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,14 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+		<plugin>
+		  <groupId>org.codehaus.mojo</groupId>
+		  <artifactId>exec-maven-plugin</artifactId>
+		  <version>1.4.0</version>
+		  <configuration>
+			<mainClass>com.callsamu.depsearcher.App</mainClass>
+		  </configuration>
+		</plugin>
       </plugins>
     </pluginManagement>
   </build>
