--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
 	  <artifactId>picocli</artifactId>
 	  <version>4.7.6</version>
 	</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.dataformat</groupId>
+		<artifactId>jackson-dataformat-xml</artifactId>
+		<version>2.11.1</version>
+	</dependency>
   </dependencies>
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
