--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,13 @@
 		<artifactId>jackson-dataformat-xml</artifactId>
 		<version>2.11.1</version>
 	</dependency>
+	<dependency>
+	  <groupId>com.squareup.okhttp3</groupId>
+	  <artifactId>mockwebserver</artifactId>
+	  <version>4.12.0</version>
+	</dependency>
   </dependencies>
+
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
