--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,20 @@
   </dependencies>
 
   <build>
+	<plugins>
+		<plugin>
+			<groupId>com.spotify.fmt</groupId>
+			<artifactId>fmt-maven-plugin</artifactId>
+			<version>2.23</version>
+			<executions>
+				<execution>
+					<goals>
+						<goal>check</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
+	</plugins>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
