--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,17 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-      <scope>test</scope>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.11.0-M2</version>
+        <scope>test</scope>
     </dependency>
+	<dependency>
+		<groupId>org.junit.jupiter</groupId>
+		<artifactId>junit-jupiter-params</artifactId>
+		<version>5.11.0-M2</version>
+		<scope>test</scope>
+	</dependency>
 	<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-common -->
 	<dependency>
 		<groupId>org.glassfish.jersey.core</groupId>
